# HC1

./: .env  .gitignore  AGENT.md  CLAUDE.md  Haas Names  README.md  SETUP.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.ts  warmth-spec.md  🏗️ Tribal HC-1 Build Plan.md
.lovable/: plan.md
docs/: ARCHITECTURE.md  PLAN-phase0.md  architecture.md  data-model.md  features.md  nudge-logic.md  theme.md
docs/plans/: 2026-02-26-warmth-circle-viz-design.md  2026-02-26-warmth-circle-viz.md
src/: App.tsx  cli.py  index.css
src/components/: BottomNav.tsx  ContactCard.tsx  WarmthCircleViz.tsx
src/contacts/: resolver.py
src/db/: knowledge_store.py
src/integrations/supabase/: types.ts
src/lib/: circleLayout.ts  constants.ts  defaultContacts.ts  nudges.ts
src/llm/: ollama_lifecycle.py  providers.py
src/pages/: Auth.tsx  CircleDetail.tsx  Circles.tsx  ContactDetail.tsx  ContactForm.tsx  Dashboard.tsx  People.tsx  Profile.tsx  Reflect.tsx  ResetPassword.tsx
src/query/: engine.py
src/readers/: imessage.py
src/test/: circleLayout.test.ts  nudges.test.ts
supabase/: config.toml
supabase/migrations/: 20260222053153_30eadab6-26d9-4343-8554-d5acdbf9a73d.sql
tests/contacts/: test_resolver.py
tests/readers/: test_imessage.py
